enviroments/dev/deployment/ghost/deployment_ghost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-ghost
  labels:
    app: deployment-ghost
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deployment-ghost
  template:
    metadata:
      labels:
        app: deployment-ghost
    spec:
      containers:
      - name: deployment-ghost
        image: ghost:latest
        ports:
        - containerPort: 2368
