enviroments/dev/deployment/ghost/service_ghost.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ghost
spec:
  type: NodePort
  selector:
    app: deployment-ghost
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
