enviroments/dev/deployment/ghost/ingress_ghost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ghost
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-ghost
            port:
              number: 80
